<resources>
    <string name="app_name">Hello</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="sensor">sensor</string>
    <string name="userinfo">userInfo</string>
    <string name="maps">maps</string>
    <string name="happy">happy</string>
    <string name="iaqspr">iaqspr</string>
    <string name="dashboard">dashboard</string>
    <string name="gas">GAS</string>
    <string name="_40">40</string>
    <string name="co2">CO2</string>
    <string name="_25">25</string>
    <string name="pm2_5">PM2.5</string>>
    <string name="pm10">PM10</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="halo_this_map">halo_this_map</string>
    <string name="halo_this_user">halo_this_user</string>
    <string name="enter">Enter</string>
    <string name="lalala">lalala</string>
    <string name="air_quality">Air Quality</string>
    <string name="open_the_iaqspr">Open the IAQSPR</string>
    <string name="open_the_air_purifier">Open the air purifier</string>
    <string name="map_route">Map Route</string>
    <string name="todo">TODO</string>
    <string name="user_infomation">User Infomation</string>
    <string name="user_id">User ID:</string>
    <string name="radiohead">radiohead</string>
    <string name="_192_168_19_131">192.168.19.131</string>
    <string name="device_id">Device ID:</string>
    <string name="open_air_purifier">Open air purifier</string>
    <string name="turn_on_device">Turn on    device</string>
    <string name="purifier_power">Purifier Power</string>
    <string name="device_power">Device Power</string>
    <string name="test">TEST</string>
</resources>
