<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2F2F2F"
    android:orientation="vertical">

    <TextView
        android:layout_width="154dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_gravity="center"
        android:text="@string/user_infomation"
        android:textColor="#ffffff"
        android:textSize="24sp" />

    <TextView
        android:layout_width="154dp"
        android:layout_height="wrap_content" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/img_user"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_gravity="center"
        android:src="@drawable/rh_icon"
        app:civ_border_color="@color/colorAccent"
        app:civ_border_width="2dp"
        app:civ_fill_color="@color/accent_grey"/>

    <TextView
        android:layout_width="154dp"
        android:layout_height="wrap_content" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow>

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/user_id"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/radiohead"
                android:textColor="@color/accent_rice"
                android:textSize="18sp"
                app:fontFamily="sans-serif-condensed" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/device_id"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/_192_168_19_131"
                android:textColor="@color/accent_rice"
                android:textSize="18sp"
                app:fontFamily="sans-serif-condensed" />
        </TableRow>
    </TableLayout>



</LinearLayout>
